1216_SSH弄完繼續切

--- a/index.html
+++ b/index.html
@@ -64,10 +64,54 @@
       </div>
 
       <!-- 2.海浪 -->
-      <div class="wave_mov"></div>
+      <div class="wave">
+        <img src="./images/wave.png" alt="" />
+        <img src="./images/wave.png" alt="" />
+      </div>
 
       <!-- 3.表單 -->
-      <div class="lottery_form"></div>
+      <div class="lottery_form center">
+        <h5 class="title">FORM</h5>
+        <img class="turtle" src="./images/turtle.png" alt="" />
+        <div id="lottery">
+          <div>
+            <p>store<span class="red">*</span></p>
+            <select id="lottery_story" placeholder="placeholder text"></select>
+          </div>
+          <div>
+            <p>name<span class="red">*</span></p>
+            <input
+              type="text"
+              id="lottery_name"
+              placeholder="placeholder text"
+            />
+          </div>
+          <div>
+            <p>phone<span class="red">*</span></p>
+            <input
+              type="text"
+              id="lottery_phone"
+              placeholder="placeholder text"
+            />
+          </div>
+          <div>
+            <p>Amount of consumption<span class="red">*</span></p>
+            <input
+              type="text"
+              id="lottery_amount"
+              placeholder="placeholder text"
+            />
+          </div>
+          <div>
+            <p>payment<span class="red">*</span></p>
+            <select
+              id="lottery_payment"
+              placeholder="placeholder text"
+            ></select>
+          </div>
+        </div>
+        <button class="lottery_submit btn">Submit</button>
+      </div>
 
       <!-- 4.獎項 -->
       <div class="lottery_info"></div>
