--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <!-- 4.獎項 -->
       <div class="lottery_info">
-        <ul class="">
+        <ul class="lottery_box">
           <li class="r_card r_green">
             <div class="r_level_A">A</div>
             <div class="r_num">ONE</div>
@@ -128,6 +128,41 @@
             <div class="r_num">ONE</div>
             <div class="r_name">range hood</div>
           </li>
+
+          <!--  X  -->
+          <li class="r_card r_gray">
+            <div class="r_level_D">B</div>
+            <div class="r_num">ONE</div>
+            <div class="r_name">range hood</div>
+          </li>
+          <li class="r_card r_gray">
+            <div class="r_level_D">B</div>
+            <div class="r_num">ONE</div>
+            <div class="r_name">range hood</div>
+          </li>
+          <li class="r_card r_gray">
+            <div class="r_level_D">B</div>
+            <div class="r_num">ONE</div>
+            <div class="r_name">range hood</div>
+          </li>
+
+          <li class="r_card r_gray">
+            <div class="r_level_D">B</div>
+            <div class="r_num">ONE</div>
+            <div class="r_name">range hood</div>
+          </li>
+          <li class="r_card r_gray">
+            <div class="r_level_D">B</div>
+            <div class="r_num">ONE</div>
+            <div class="r_name">range hood</div>
+          </li>
+
+          <li class="r_card r_gray">
+            <div class="r_level_D">B</div>
+            <div class="r_num">ONE</div>
+            <div class="r_name">range hood</div>
+          </li>
+          <!--  X  -->
         </ul>
       </div>
 
