1217_切完弄動畫

--- a/index.html
+++ b/index.html
@@ -128,61 +128,52 @@
             <div class="r_num">ONE</div>
             <div class="r_name">range hood</div>
           </li>
-
-          <!--  X  -->
-          <li class="r_card r_gray">
-            <div class="r_level_D">B</div>
-            <div class="r_num">ONE</div>
-            <div class="r_name">range hood</div>
-          </li>
-          <li class="r_card r_gray">
-            <div class="r_level_D">B</div>
-            <div class="r_num">ONE</div>
-            <div class="r_name">range hood</div>
-          </li>
-          <li class="r_card r_gray">
-            <div class="r_level_D">B</div>
-            <div class="r_num">ONE</div>
-            <div class="r_name">range hood</div>
-          </li>
-
-          <li class="r_card r_gray">
-            <div class="r_level_D">B</div>
-            <div class="r_num">ONE</div>
-            <div class="r_name">range hood</div>
-          </li>
-          <li class="r_card r_gray">
-            <div class="r_level_D">B</div>
-            <div class="r_num">ONE</div>
-            <div class="r_name">range hood</div>
-          </li>
-
-          <li class="r_card r_gray">
-            <div class="r_level_D">B</div>
-            <div class="r_num">ONE</div>
-            <div class="r_name">range hood</div>
-          </li>
-          <!--  X  -->
         </ul>
       </div>
 
       <!-- 5.燈塔 -->
       <div class="tower center">
-        <div>
-          <div></div>
-          <div>
-            <p>13.32</p>
-            <p>who seeks after it and wants to have it</p>
+        <div class="t_text_box">
+          <div class="t_line_l line"></div>
+          <div class="t_text">
+            <span>13.32</span>
+            <h4>who seeks after it and wants to have it</h4>
           </div>
-          <div></div>
+          <div class="t_line_r line"></div>
         </div>
         <img src="./images/lighthouse.svg" alt="" />
       </div>
 
       <!-- 6.商城 -->
       <div class="market">
-        <div class="market_title"></div>
-        <div class="market_pad"></div>
+        <div class="market_title">
+          <h4>Neque porro quisquam est qui dolorem!</h4>
+        </div>
+        <div class="market_pad center">
+          <h2>Argentina</h2>
+          <ul class="m_text">
+            <li>
+              <img src="./images/m_star.png" />
+              <p>adipisci velit.</p>
+            </li>
+            <li>
+              <img src="./images/m_star.png" />
+              <p>adipisci velit.</p>
+            </li>
+          </ul>
+          <div class="m_icon">
+            <img src="./images/m_house.png" />
+            <img src="./images/m_motorcycle.png" />
+            <img src="./images/m_gift.png" />
+            <img src="./images/m_boating.png" />
+          </div>
+
+          <ul class="m_circle">
+            <li class="m_circle_n"></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
       </div>
     </div>
 
