--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <div class="top_banner center">
         <div class="main_title center">
           <h2>There is no one</h2>
-          <h3>who loves pain</h3>
+          <span>who loves pain</span>
         </div>
 
-        <button class="btn" desable>FORM</button>
+        <button class="btn rainbow_btn">FORM</button>
 
         <div class="info center">
           <div class="info_top_animation">
@@ -65,8 +65,8 @@
 
       <!-- 2.海浪 -->
       <div class="wave">
-        <img src="./images/wave.png" alt="" />
-        <img src="./images/wave.png" alt="" />
+        <img src="./images/wave.png" />
+        <img src="./images/wave.png" />
       </div>
 
       <!-- 3.表單 -->
