--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 
           <!-- 煙火區塊 -->
           <div class="info_bottom_animation">
-            <div class="fireworks"></div>
+            <div class="fireworks">
+              <img src="./images/fireworks.svg" />
+            </div>
             <img class="bottom_boat" src="./images/sup_bot.svg" />
           </div>
         </div>
@@ -73,7 +75,7 @@
       <div class="lottery_form center">
         <h5 class="title">
           FORM
-          <img class="turtle" src="./images/turtle.png" alt="" />
+          <img class="turtle" src="./images/turtle.png" />
         </h5>
         <div id="lottery">
           <div>
@@ -141,7 +143,7 @@
           </div>
           <div class="t_line_r line"></div>
         </div>
-        <img src="./images/lighthouse.svg" alt="" />
+        <img src="./images/lighthouse.svg" />
       </div>
 
       <!-- 6.商城 -->
