--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
               v-model="f_store"
             />
             <datalist id="store">
-              <option value="aaaaaaa"></option>
-              <option value="bbbbbbb"></option>
-              <option value="ccccccc"></option>
-              <option value="ddddddd"></option>
-              <option value="eeeeeee"></option>
+              <option value="Arkansas"></option>
+              <option value="Connecticut"></option>
+              <option value="Kentucky"></option>
+              <option value="Massachusetts"></option>
+              <option value="Pennsylvania"></option>
             </datalist>
             <div class="select_arrow"></div>
             <span class="wrong_msg">{{f_store_ErrMsg}}</span>
@@ -140,8 +140,8 @@
             <p>payment<span class="red">*</span></p>
             <select id="lottery_payment" v-model="f_payment">
               <option disabled selected>digital payment</option>
-              <option>Lorem, ipsum.</option>
-              <option>Lorem, ipsum dolor.</option>
+              <option>VISA</option>
+              <option>PAYPAL</option>
             </select>
             <div class="select_arrow"></div>
             <span class="wrong_msg">{{f_payment_ErrMsg}}</span>
