--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>前端面試作業</title>
     <link rel="stylesheet" href="css/style.min.css" />
     <link
@@ -18,8 +19,7 @@
           <h2>There is no one</h2>
           <span>who loves pain</span>
         </div>
-
-        <button class="btn rainbow_btn">FORM</button>
+        <a href="#form"><button class="btn rainbow_btn">FORM</button></a>
 
         <div class="info center">
           <div class="info_top">
@@ -74,6 +74,7 @@
         <img src="./images/wave.png" />
         <img src="./images/wave.png" />
       </div>
+      <a name="form" id="form"></a>
 
       <!-- 3.表單 -->
       <div class="lottery_form center">
